# util

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/util/: bit_vector.h  complex.h  ddouble.h  error.h  fft.h  functional.h  gnuplot.h  hash.h  hash_map.h  hdf5.h  io.h  json.h  lexer.h  linalg.h  linenoise.h  logging.h  lua.h  memory.h  ndarray.h  numerics.h  numpy.h  progressbar.h  random.h  ring_buffer.h  sampler.h  series.h  simd.h  sorted_vector.h  span.h  sqlite.h  stats.h  stopwatch.h  string.h  string_id.h  synchronized.h  threadpool.h  unionfind.h  vector.h  vector2d.h
include/util/bits/: .clang-format  simd_avx.h  simd_generic.h
src/apps/: json-format.cpp  lua-repl.cpp  random.cpp  sha256sum.cpp
src/util/: bit_vector.h  bits.h  bitset.h  complex.h  factory.h  fft.cpp  gnuplot.cpp  gnuplot.h  hash.cpp  hash.h  hash_map.h  hdf5.cpp  hdf5.h  io.cpp  iterator.h  json.cpp  json.h  lazy.h  lexer.h  linalg.h  linenoise.cpp  lua.cpp  memory.cpp  memory.h  ndarray.h  numerics.cpp  numerics.h  numpy.cpp  numpy.h  progressbar.h  random.h  sampler.cpp  sampler.h  simd.h  small_vector.h  span.h  sqlite.cpp  static_vector.h  stats.cpp  stats.h  (+9 more)
src/util/bits/: simd_avx.h  simd_generic.h
tests/: bits.cpp  complex.cpp  ddouble.cpp  error.cpp  functional.cpp  hash.cpp  hash_map.cpp  io.cpp  iterator.cpp  json.cpp  linalg.cpp  lua.cpp  memory.cpp  numerics.cpp  random.cpp  series.cpp  simd.cpp  small_vector.cpp  sorted_vector.cpp  sqlite.cpp  stats.cpp  string.cpp  testutil.cpp  threadpool.cpp  unionfind.cpp  vector.cpp
